--- a/nginx.config
+++ b/nginx.config
@@ -38,9 +38,9 @@ server {
         proxy_cache_bypass $http_upgrade;
 
         # Forward the real IP address
-        set_real_ip_from 0.0.0.0/0;
-        real_ip_header X-Forwarded-For;
-        real_ip_recursive on;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;        
     }
 
     location /webhook {
