Load balancing & health check

--- a/nginx.config
+++ b/nginx.config
@@ -1,3 +1,17 @@
+# Define o upstream com as instâncias disponíveis
+upstream api_servers {
+    server localhost:3000 max_fails=3 fail_timeout=30s;
+    server localhost:3001 max_fails=3 fail_timeout=30s;
+    server localhost:3002 max_fails=3 fail_timeout=30s;
+    server localhost:3003 max_fails=3 fail_timeout=30s;
+    server localhost:3004 max_fails=3 fail_timeout=30s;
+    server localhost:3005 max_fails=3 fail_timeout=30s;
+    server localhost:3006 max_fails=3 fail_timeout=30s;
+    server localhost:3007 max_fails=3 fail_timeout=30s;
+    server localhost:3008 max_fails=3 fail_timeout=30s;
+    server localhost:3009 max_fails=3 fail_timeout=30s;
+}
+
 server {
     if ($host = www.ensine.me) {
         return 301 https://$host$request_uri;
@@ -30,7 +44,7 @@ server {
 
     location /api/ {
         rewrite ^/api/(.*) /$1 break;
-        proxy_pass http://localhost:3000;
+        proxy_pass http://api_servers;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
@@ -40,7 +54,7 @@ server {
         # Forward the real IP address
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;        
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 
     location /webhook {
@@ -51,4 +65,3 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
-
