Fixed nginx cors problem

--- a/nginx.config
+++ b/nginx.config
@@ -43,13 +43,13 @@ server {
     ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
     location /api/ {
-	add_header 'Access-Control-Allow-Origin' 'https://landing-page-tests-seven.vercel.app';
-    	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-    	add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+	#add_header 'Access-Control-Allow-Origin' 'https://landing-page-tests-seven.vercel.app';
+    	#add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+    	#add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
     	if ($request_method = 'OPTIONS') {
-        	add_header 'Access-Control-Allow-Origin' 'https://landing-page-tests-seven.vercel.app';
-        	add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
-        	add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
+        	#add_header 'Access-Control-Allow-Origin' 'https://landing-page-tests-seven.vercel.app';
+        	#add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS';
+        	#add_header 'Access-Control-Allow-Headers' 'Content-Type, Authorization';
         	return 204;
     	}
         rewrite ^/api/(.*) /$1 break;
